# cpp_skeleton

./: CMakeLists.txt  README.md
liba/: CMakeLists.txt  a.cpp  a.hpp
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/liba_test/: ATest.cpp  CMakeLists.txt
